# danube

./:   .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  haproxy.cfg
.github/workflows/: pull-request-tests.yml  release.yml  unit-tests.yml
architecture/: architecture.md  pub-sub_messaging.md
config/: danube_broker.yml
danube-admin/: Cargo.toml  README.md
danube-admin-cli/: Cargo.toml  README.md
danube-admin-cli/src/: brokers.rs  main.rs  namespaces.rs  topics.rs
danube-admin-cli/src/proto/: danube_admin.rs
danube-admin/src/: brokers.rs  main.rs  namespaces.rs  shared.rs  topics.rs
danube-admin/src/proto/: danube_admin.rs
danube-broker/: Cargo.toml  build.rs
danube-broker/src/: admin.rs  broker_metrics.rs  broker_server.rs  broker_service.rs  consumer.rs  controller.rs  danube_service.rs  delivery_strategy.rs  dispatch_strategy.rs  dispatcher.rs  error_message.rs  grpc_handlers.rs  load_report.rs  main.rs  message.rs  metadata_store.rs  namespace.rs  policies.rs  producer.rs  resources.rs  retention_strategy.rs  schema.rs  service_configuration.rs  services.rs  storage.rs  subscription.rs  topic.rs  topic_storage.rs  utils.rs
danube-broker/src/admin/: brokers_admin.rs  namespace_admin.rs  topics_admin.rs
danube-broker/src/broker_server/: consumer_handler.rs  discovery_handler.rs  health_check_handler.rs  producer_handler.rs
danube-broker/src/controller/: leader_election.rs  load_balance.rs  load_manager.rs  local_cache.rs  syncronizer.rs
danube-broker/src/controller/load_manager/: load_report.rs
danube-broker/src/danube_service/: broker_register.rs  leader_election.rs  load_manager.rs  local_cache.rs  syncronizer.rs
danube-broker/src/danube_service/load_manager/: load_report.rs  rankings.rs
danube-broker/src/danube_service/local_cache/: trie.rs
danube-broker/src/dispatcher/: dispatcher_multiple_consumers.rs  dispatcher_reliable_multiple_consumers.rs  dispatcher_reliable_single_consumer.rs  dispatcher_single_consumer.rs  reliable_consumer_dispatch.rs
danube-broker/src/metadata_store/: etcd_metadata_store.rs  etcd_watch.rs  local_memory_metadata_store.rs  memory_metadata_store.rs
danube-broker/src/proto/: danube.rs  danube_admin.rs
danube-broker/src/resources/: _resources.md  cluster.rs  namespace.rs  topic.rs
danube-broker/src/retention_strategy/: non_reliable_retention.rs  reliable_retention.rs
danube-broker/src/services/: topic.rs
danube-broker/src/storage/: memory_segment_storage.rs
danube-broker/tests/: non_partitioned_topic_test.rs  partitioned_topic_test.rs  reliable_dispatch_topic_test.rs  subscriptions_test.rs  test.blob
danube-cli/: Cargo.toml  README.md
danube-cli/src/: brokers.rs  consume.rs  main.rs  namespaces.rs  produce.rs  topics.rs
danube-cli/src/proto/: danube_admin.rs
danube-client/: Cargo.toml  README.md
danube-client/examples/: consumer.rs  consumer_json.rs  consumer_partitions.rs  json_consumer.rs  json_producer.rs  partitions_consumer.rs  partitions_producer.rs  producer.rs  producer_json.rs  producer_partitions.rs  reliable_delivery_consumer.rs  reliable_delivery_producer_json.rs  reliable_dispatch_consumer.rs  reliable_dispatch_producer.rs
danube-client/src/: client.rs  connection_manager.rs  consumer.rs  delivery_strategy.rs  dispatch_strategy.rs  errors.rs  health_check.rs  lib.rs  lookup_service.rs  main.rs  message.rs  message_router.rs  producer.rs  retention_strategy.rs  rpc_connection.rs  schema.rs  schema_service.rs  topic_consumer.rs  topic_producer.rs
danube-client/src/message/: consumer_message.rs  producer_message.rs
danube-client/src/proto/: danube.rs
danube-controller/: Cargo.toml
danube-controller/src/: main.rs  service.rs
danube-controller/src/service/: handlers.rs
danube-metadata-store/: Cargo.toml
danube-metadata-store/src/: errors.rs  lib.rs  providers.rs  store.rs  watch.rs
danube-metadata-store/src/providers/: etcd.rs  in_memory.rs  redis.rs
danube-pubsub/: Cargo.toml  README.md
danube-pubsub/src/: consume.rs  main.rs  produce.rs
danube-reliable-delivery/: Cargo.toml
danube-reliable-delivery/src/: lib.rs  reliable_dispatch.rs
danube-reliable-dispatch/: Cargo.toml
danube-reliable-dispatch/src/: dispatch.rs  dispatch_test.rs  errors.rs  lib.rs  reliable_dispatch.rs  storage_backend.rs  topic_storage.rs  topic_storage_test.rs
danube-reliable-dispatch/src/storage_backend/: aws_s3.rs  disk.rs  in_memory.rs
danube-util/: Cargo.toml
danube-util/src/: schema.rs
docs/: 01-Architecture.md  02-producers_consumers.md  03-Non-persistent_vs_Persistent_messaging.md  03-PubSub_messaging_vs_Streaming.md  03-producers_consumers.md  04-Queuing_PubSub_messaging.md  internal_danube_services.md  internal_resources.md
documentation/: 01-Architecture.md  02-Queuing_PubSub_messaging.md  02-pub_sub_messaging.md
proto/: DanubeAdmin.proto  DanubeApi.proto  danube.rs
protos/: DanubeApi.proto
scripts/: Dockerfile_tmp  Makefile  etcd-cluster.yml  haproxy.cfg
src/: broker.rs
src/broker/: danube_service.rs
