[workspace.lints.rust]
unsafe_code = "forbid"
#unused = "allow"

[workspace]
resolver = "2"
members = [
    # -- Danube stream core services
    "danube-broker",

    # -- Danube lib client
    "danube-client", 
]

[workspace.dependencies]
bytes = "1.6.0"
prost = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tonic-types = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
