[workspace.lints.rust]
unsafe_code = "forbid"
#unused = "allow"

[workspace]
resolver = "2"
members = [
    # -- Danube pub/sub core services
    "danube-broker",

    # -- Danube Reliable Dispatch lib 
    "danube-reliable-dispatch",

    # -- Danube Metadata Store lib
    "danube-metadata-store", 

    # -- Danube lib client
    "danube-client",

    # -- Danube admin cli
    "danube-admin-cli", 
    
    # -- Danube client cli
    "danube-cli", 
]

[workspace.dependencies]
prost = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tonic-types = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
