[package]
name = "danube-admin"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = {version = "4.5.8", features =["derive"]}
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
prettytable-rs = "0.10.0"
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
