[package]
name = "danube-broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
etcd-client = "0.12.4"
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

danube-util = { path = "../danube-util" }

[build-dependencies]
tonic-build = "0.11"

[lints]
workspace = true
