[package]
name = "danube-broker"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
danube-client = {path = "../danube-client"}

clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
etcd-client = "0.12.4"
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0.83"
tonic-types = { workspace = true }
rand = "0.8.5"
tokio-stream = "0.1.15"
futures = "0.3.30"
base64 = "0.22.1"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
serde_yaml = "0.9.34"

[build-dependencies]
tonic-build = "0.11"

[lints]
workspace = true

[dev-dependencies]
futures-util = "0.3.30"
once_cell = "1.19.0"
