[package]
name = "danube-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.8", features =["derive"]}
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
prettytable-rs = "0.10.0"

[lints]
workspace = true
