[package]
name = "danube-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.59"
tokio = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }
url = "2.5.0"

[[example]]
name = "producer"
path = "examples/producer.rs"

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.82"
tracing-subscriber = { workspace = true }
