[package]
name = "danube-client"
version = "0.1.5"
description = "The async client for Danube Pub/Sub messsaging platform"
keywords = ["danube", "pub-sub", "messaging_system", "message_broker", "event_streaming"]
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
repository = "https://github.com/danrusei/danube"
documentation = "https://docs.rs/danube-client"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.59"
tokio = { workspace = true }
tokio-stream = "0.1.15"
tonic = { workspace = true }
tonic-types = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
anyhow = "1.0.82"
tracing-subscriber = { workspace = true }
