[package]
name = "danube-reliable-dispatch"
version = "0.1.0"
edition = "2021"

[dependencies]
danube-client = {path = "../danube-client"}
dashmap = "5.5.3"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0.59"
async-trait = "0.1.83"
bincode = "1.3.3"
aws-config = "1.5.11"
aws-sdk-s3 = "1.66.0"
bytes = "1.9.0"
aws-smithy-runtime-api = "1.0"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.8"

[lints]
workspace = true
